tests/snapshots/codegen__codegen_ModuleB.snap
---
source: tests/codegen.rs
expression: js
---
import * as ModuleA from "../ModuleA/index.js";
var runIt = /* #__PURE__ */ ModuleA.runIt(ModuleA.myMonadBox);
var testQualified = function (b) {
    return runIt(b);
};
export {
    testQualified
};
