tests/snapshots/codegen__codegen_MultiConstraintDict.snap
---
source: tests/codegen.rs
expression: js
---
import * as Data_Semigroup from "../Data.Semigroup/index.js";
import * as Data_Show from "../Data.Show/index.js";
var myClassInt = {
    myMethod: function (v) {
        return "int";
    }
};
var myMethod = function (dict) {
    return dict.myMethod;
};
var useBoth = function (dictShow) {
    return function (dictMyClass) {
        return function (x) {
            return Data_Semigroup.append(Data_Semigroup.semigroupString)(Data_Show.show(dictShow)(x))(myMethod(dictMyClass)(x));
        };
    };
};
var test = /* #__PURE__ */ useBoth(Data_Show.showInt)(myClassInt)(42);
export {
    myMethod,
    myClassInt,
    useBoth,
    test
};
