tests/snapshots/codegen__codegen_NegateAndUnary.snap
---
source: tests/codegen.rs
expression: js
---
var aPositive: number = 42;

var aPositiveFloat: number = 3.14;


export { aPositive, aPositiveFloat };
