tests/snapshots/codegen__codegen_NewtypeErasure.snap
---
source: tests/codegen.rs
expression: js
---
var Name = (function() {
  function Name() {
  };
  Name.create = function(x) {
    return x;
  };
  return Name;
})();

var Wrapper = (function() {
  function Wrapper() {
  };
  Wrapper.create = function(x) {
    return x;
  };
  return Wrapper;
})();

var mkName = function(s) {
  return Name.create(s);
};

var unwrapName = function($v0) {
  var s = $v0;
  return s;
};

var wrapInt = function(n) {
  return Wrapper.create(n);
};

var unwrapWrapper = function($v1) {
  var x = $v1;
  return x;
};


export { Name, Wrapper, mkName, unwrapName, unwrapWrapper, wrapInt };
