tests/snapshots/codegen__codegen_OperatorHidingImport.snap
---
source: tests/codegen.rs
expression: js
---
import * as MyLib from "../MyLib/index.js";


var joined = function(dictMyAppend) {
  return function(x) {
    return function(y) {
      return dictMyAppend.myAppend(x)(y);
    };
  };
};


export { joined };
