tests/snapshots/codegen__codegen_Operators.snap
---
source: tests/codegen.rs
expression: js
---
var useOp = function (x) {
    return add(x)(x);
};
var useDollar = function (x) {
    return applyFn(useOp)(x);
};
var applyFn = function (f) {
    return function (x) {
        return f(x);
    };
};
var add = function (a) {
    return function (b) {
        return a;
    };
};
export {
    add,
    useOp,
    applyFn,
    useDollar
};
