tests/snapshots/codegen__codegen_OrdDictApplication.snap
---
source: tests/codegen.rs
expression: js
---
var myOrdInt = {
    myCompare: function (v) {
        return function (v1) {
            return "compared";
        };
    }
};
var myCompare = function (dict) {
    return dict.myCompare;
};
var smaller = function (dictMyOrd) {
    var myCompare1 = myCompare(dictMyOrd);
    return function (x) {
        return function (y) {
            return myCompare1(x)(y);
        };
    };
};
var test = /* #__PURE__ */ smaller(myOrdInt)(1)(2);
export {
    myCompare,
    myOrdInt,
    smaller,
    test
};
