tests/snapshots/codegen__codegen_ParamInstanceShowBug.snap
---
source: tests/codegen.rs
expression: js
---
var Box = /* #__PURE__ */ (function () {
    function Box (value0) {
        this.value0 = value0;
    };
    Box.create = function (value0) {
        return new Box(value0);
    };
    return Box;
})();
var myClassInt = {
    extract: function (x) {
        return x;
    }
};
var extract = function (dict) {
    return dict.extract;
};
var myClassBox = function (dictMyClass) {
    var extract1 = extract(dictMyClass);
    return {
        extract: function (v) {
            return extract1(v.value0);
        }
    };
};
var run = function (dictMyClass) {
    return function (dictMyClass1) {
        var extract1 = extract(dictMyClass1);
        return function (x) {
            return extract1(x);
        };
    };
};
var test = /* #__PURE__ */ (function () {
    return run(myClassInt)(myClassBox(myClassInt))(new Box(99));
})();
export {
    extract,
    myClassInt,
    Box,
    myClassBox,
    run,
    test
};
